[project]
name = "memory-in-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.72.0",
    "langchain-groq>=0.3.8",
    "ipykernel>=7.2.0",
    "mem0ai>=1.0.11",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "google-generativeai>=0.8.6",
]
